--- a/site_20220425_ex/index.html
+++ b/site_20220425_ex/index.html
@@ -11,6 +11,7 @@
 <body>
     <div id="container">
         <div id="banner">
+            <img id="ban" src="Imagens/maxresdefault.jpg" alt="">
         </div>
         <div id="link">
             <nav>
@@ -20,22 +21,22 @@
             </nav>
         </div>
         <div id="texto">
-            
+            <p>Lorem ipsum dolor sit, amet consectetur adipisicing elit. Laborum quis illo maiores, tempore explicabo illum dolorum nobis eaque nisi aperiam, corporis ducimus vitae ipsa. Exercitationem quaerat assumenda ab facere necessitatibus?</p>
         </div>
         <div id="video1">            
-            <iframe width="200" height="200" src="https://www.youtube.com/embed/n5XCoy9lBbI" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
+            <iframe id="vid1" src="https://www.youtube.com/embed/lSRMWtor9UQ" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
         </div>
         <div id="video2">            
-            <iframe width="200" height="200" src="https://www.youtube.com/embed/loOV5bHM2GI" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>           
+            <iframe id="vid2" src="https://www.youtube.com/embed/V1YeMXE6Wn4" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
         </div>
         <div id="video3">          
-            <iframe width="200" height="200" src="https://www.youtube.com/embed/n5XCoy9lBbI" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
+            <iframe id="vid3" src="https://www.youtube.com/embed/dYqnkm06SCk" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
         </div>
-        <div id="video4">           
-            <iframe width="200" height="200" src="https://www.youtube.com/embed/loOV5bHM2GI" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>           
+        <div id="video4">
+            <iframe id="vid4" src="https://www.youtube.com/embed/PCdkYo9NmKk" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>          
         </div>
         <div id="footer">
-            
+            <p>Lorem ipsum dolor sit amet consectetur, adipisicing elit. Eaque iusto exercitationem voluptate architecto unde inventore, sequi, dolores, illum quas mollitia harum ipsam ex necessitatibus laboriosam esse cum nam aspernatur incidunt.</p>
         </div>
     </div>
 </body>
