--- a/site_20220425_ex/imagens.html
+++ b/site_20220425_ex/imagens.html
@@ -6,11 +6,12 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="css/Style.css">
     <!-- <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@4.6.1/dist/css/bootstrap.min.css" integrity="sha384-zCbKRCUGaJDkqS1kPbPd7TveP5iyJE0EjAuZQTgFLD2ylzuqKfdKlfG/eSrtxUkn" crossorigin="anonymous"> -->
-    <title>Doação de sangue</title>
+    <title>Imagens - Skateboard</title>
 </head>
 <body>
     <div id="container">
         <div id="banner">
+            <img id="ban" src="Imagens/maxresdefault.jpg" alt="">
         </div>
         <div id="link">
             <nav>
@@ -35,7 +36,7 @@
             <img id="imagens1" src="Imagens/4.jpg" alt="">      
         </div>
         <div id="footer">
-            
+            <p>Lorem ipsum dolor sit amet consectetur, adipisicing elit. Eaque iusto exercitationem voluptate architecto unde inventore, sequi, dolores, illum quas mollitia harum ipsam ex necessitatibus laboriosam esse cum nam aspernatur incidunt.</p>
         </div>
     </div>
 </body>
