--- a/site_20220425_ex/index.html
+++ b/site_20220425_ex/index.html
@@ -24,10 +24,10 @@
             <p>Lorem ipsum dolor sit, amet consectetur adipisicing elit. Laborum quis illo maiores, tempore explicabo illum dolorum nobis eaque nisi aperiam, corporis ducimus vitae ipsa. Exercitationem quaerat assumenda ab facere necessitatibus?</p>
         </div>
         <div id="video1">            
-            <iframe id="vid1" src="https://www.youtube.com/embed/lSRMWtor9UQ" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
+            <iframe id="vid1" src="https://www.youtube.com/embed/ktRmOmMb0mg?controls=0" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
         </div>
         <div id="video2">            
-            <iframe id="vid2" src="https://www.youtube.com/embed/V1YeMXE6Wn4" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
+            <iframe id="vid2" src="https://www.youtube.com/embed/-e7k47BHCb0" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
         </div>
         <div id="video3">          
             <iframe id="vid3" src="https://www.youtube.com/embed/dYqnkm06SCk" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
