--- a/Bootstrap_Presencial_2/index.html
+++ b/Bootstrap_Presencial_2/index.html
@@ -81,7 +81,7 @@
         <div class="container-fluid pt-2">
             <div class="row">
                 <div class="card-group col-6">
-                    <div class="card  border shadow-sm">
+                    <div class="card  border shadow-sm card__video">
                         <iframe width="100%" height="100%" src="https://www.youtube-nocookie.com/embed/dPcdCZekMQg?start=3" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
                     </div>
                 </div>
@@ -96,7 +96,7 @@
                     </div>
                 </div>
                 <div class="card-group col-3" >
-                    <div class="card  border shadow-sm" id="img">
+                    <div class="card  border shadow-sm  card__img">
                         <div class="card-body">
                             <h5 class="card-title">Card title</h5>
                             <p class="card-text">his is a wider card with supporting text below as a natural lead-in to additional content. This content is a little bit longer.</p>
@@ -109,7 +109,7 @@
         <div class="container-fluid pt-2">
             <div class="row">
                 <div class="card-group col-3">
-                    <div class="card  border shadow-sm" id="img">
+                    <div class="card  border shadow-sm card__img">
                         <div class="card-body">
                             <h5 class="card-title">Card title</h5>
                             <p class="card-text">his is a wider card with supporting text below as a natural lead-in to additional content. This content is a little bit longer.</p>
